Fixing relevance score bug and feedback form overlap

--- a/client/stylesheets/layout.styl
+++ b/client/stylesheets/layout.styl
@@ -61,7 +61,7 @@ navbar-height = 65px
   padding 4px
   box-shadow 1px 1px 1px rgba(0, 0, 0, 0.4)
   position relative
-  z-index 100
+  z-index 99
 
 .vis-pane
   flex 1 1 auto
